Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -67,8 +67,9 @@
 }
 
 .headers h1,
-.headers h2 {
-    /*visibility: hidden;*/
+.headers h2,
+.road-sign,
+.phone {
     opacity: 0;
 }
 
@@ -112,8 +113,6 @@
     transform: rotate(45deg);
     cursor: pointer;
     z-index: 1;
-    /*visibility: hidden;*/
-    opacity: 0;
 }
 
 .road-sign a {
@@ -122,8 +121,7 @@
 }
 
 .phone {
-    /*visibility: hidden;*/
-    opacity: 0;
+    z-index: 1;
 }
 
 
@@ -237,16 +235,11 @@
 }
 
 @media (min-width: 320px) and (max-height: 576px) {
-    .truck > div {
+    .truck {
         display: none;
     }
     .info-panel {
-        padding-top: 110px;
-    }
-    .headers h1,
-    .headers h2 {
-        /*visibility: visible;*/
-        /*opacity: 1;*/
+        padding-top: 55px;
     }
     .call-button a {
         font-size: 1rem;
@@ -254,12 +247,6 @@
     .road-sign {
         height: 100px;
         width: 100px;
-        /*visibility: visible;*/
-        /*opacity: 1;*/
-    }
-    .phone {
-        /*visibility: visible;*/
-        /*opacity: 1;*/
     }
 }
 
